2001-10-18  Bradford Hovinen  <hovinen@ximian.com>

	* Bonobo_Control_Capplet_generic.oaf.in: Update listener name

	* capplet-util.c (create_control_cb): Use correct prefix for listener

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (get_factory_name): Updated factory name to
	reflect new, expanded roles

	* Bonobo_Control_Capplet_generic.oaf.in: Create

2001-09-29  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (create_control_cb): Elimite reference counter --
	it's not necessary
	(create_control_cb): Make this a multi-factory so that we can
	return the listener when needed
	(capplet_init): Set up the listener here rather than in
	get_control_cb; also remove the listener and unref the database
	here
	(quit_cb, real_quit_cb): Remove (thank the gods)

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (get_default_moniker): Remove -control from the
	end of the string as well as -capplet
	(get_factory_name): Ditto
	(get_property_name): Ditto

2001-09-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (legacy_is_modified): Improved error checking and
	cleaned up the logic a bit

2001-09-14  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (set_moniker_cb): Don't call setup_cb after the
	first time

2001-09-03  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (set_moniker_cb): Free the full moniker to
	correct memory leak
	(set_moniker_cb): Disconnect old signal handler

2001-08-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (get_default_moniker): Update moniker being used

2001-07-30  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (capplet_init): Don't sync if we need legacy
	values
	(capplet_init): Call setup_session_mgmt if --apply or
	--init-session-settings was passed

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (capplet_init): Don't sync the database if